appId: host.exp.exponent
---
- tapOn:
    id: "tab-dev-tools"
- assertVisible: "Dev Tools"
- tapOn: "dev-create-smoke-account"
- waitForAnimationToEnd
- runFlow:
    when:
      visible: "Smoke account created successfully"
    commands:
      - assertVisible: "Smoke account created successfully"

- runFlow:
    when:
      visible: "Smoke account already exists"
    commands:
      - assertVisible: "Smoke account already exists"
